[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiusmem"
version = "0.1.0a0"
description = "A W3C-compliant temporal knowledge graph library for AI agents."
authors = [
    { name = "Timothy W. Cook" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rdflib>=6.0.0",
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "python-dotenv>=0.19.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.30",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.21.0",
    "cohere>=4.0.0",
    "transformers>=4.40.0",
    "huggingface_hub>=0.23.0",
    "mistralai>=0.1.0"
]
license = { file = "LICENSE" } 

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test"
] 